# openmp

./: CMakeLists.txt  conandata.yml  edge.cpp  edge.h  espejo.cpp  espejo.h  ggg.cpp  ggg.h  main.cpp  mediana.cpp  mediana.h  rotacion.cpp  rotacion.h  sobel.cpp  sobel.h  suma.cpp  suma.h
